# gomoku-alphazero-ai

./: .gitignore  AGENTS.md  LICENSE  README.md  benchmark_models.py  game_gui.py  model_battle.py  online_refine_vs_pool.py  rapfi_budget_round_robin.py  requirements.txt  search_runtime.py  start_project.command  train.py  training_monitor.py
backend/: __init__.py  game_service.py  go_rules.py  katago_runtime.py  models_service.py  schemas.py  ws_routes.py
frontend/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts  websocket.ts
frontend/src/components/: BattlePage.tsx  BoardCanvas.tsx  ControlPanel.tsx  ModelSelector.tsx  StatusBar.tsx
frontend/src/hooks/: useAiMove.ts  useAutoplay.ts  useGameSession.ts  (+2 more)
gomoku_cnn_strong/: 1.pth  10.pth  11.pth  12.pth  13.pth  14.pth  15.pth  16.pth  17.pth  18.pth  19.pth  2.pth  20.pth  21.pth  22.pth  23.pth  24.pth  25.pth  26.pth  27.pth  28.pth  29.pth  3.pth  30.pth  31.pth  32.pth  33.pth  34.pth  35.pth  36.pth  37.pth  4.pth  5.pth  6.pth  7.pth  8.pth  9.pth  backup_round_10.pth  backup_round_20.pth  backup_round_30.pth
legacy/: README.md
legacy/python-backend/: api_routes.py  db.py  main.py
legacy/python-scripts/: ai_battle.py  online_refine_vs_baseline.py
models/experiments/: README.md
scripts/: katago_gui.command  start_project.command
server/: Cargo.toml
server/src/: api.rs  config.rs  db.rs  katago.rs  main.rs  rules.rs  session.rs  ws.rs
training/: requirements.txt  train.py  training_monitor.py
(+3 files in other folders)
